--- a/src/main/resources/static/styles/signon.scss
+++ b/src/main/resources/static/styles/signon.scss
@@ -19,148 +19,11 @@ body {
   flex-flow: column;
   transition: background 1s ease-in-out;
 
-  #toggle-signon-mode {
-    display: flex;
-    width: 50%;
-    justify-content: center;
-    gap: 5vw;
-    align-items: center;
-    padding: 1em;
-    background: darken($light, 10%);
-    border-radius: 1em;
-    transition: background 1s ease-in-out;
-    #signon-switch-label {
-      position: relative;
-      display: inline-block;
-      width: 4em;
-      height: 2em;
-    }
-    #signon-switch-label input {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
-    #signon-switch {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: $dark;
-      -webkit-transition: .4s;
-      transition: .4s;
-      border-radius: 2em;
-    }
+  @import 'account/toggle-signon';
 
-    #signon-switch:before {
-      position: absolute;
-      content: "";
-      height: 1.6em;
-      width: 1.6em;
-      left: 0.25em;
-      bottom: 0.2em;
-      background-color: $accent;
-      -webkit-transition: 1s;
-      transition: 1s;
-      border-radius: 50%;
-    }
+  @import 'account/signon-container';
 
-    input:checked + #signon-switch {
-      background-color: $light;
-    }
-
-    input:focus + #signon-switch {
-      box-shadow: 0 0 0.01em $light;
-    }
-
-    input:checked + #signon-switch:before {
-      -webkit-transform: translateX(1.9em);
-      -ms-transform: translateX(1.9em);
-      transform: translateX(1.9em);
-    }
-
-    h3 {
-      transition: color 1s ease-in-out;
-    }
-  }
-
-  #signon-container {
-    display: flex;
-    width: 50%;
-    height: 60%;
-    justify-content: space-evenly;
-    flex-flow: column;
-    align-items: center;
-    padding: 1em;
-    background: darken($light, 10%);
-    border-radius: 1em;
-    transition: background 1s ease-in-out;
-    p {
-      text-align: center;
-      width: 60%;
-      transition: color 1s ease-in-out;
-    }
-    h2 {
-      text-align: center;
-      width: 80%;
-      transition: color 1s ease-in-out;
-    }
-    .signon-container {
-      border-radius: 1em;
-      padding: 0.5em;
-      display: flex;
-      flex-flow: column;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      .label-signon {
-        background: darken($light, 10%);
-        width: fit-content;
-        position: absolute;
-        top: -0.2em;
-        padding-left: 0.5em;
-        padding-right: 0.5em;
-        font-family: $headingFamily;
-        font-weight: 500;
-        font-size: 1.1em;
-        transition: color 1s ease-in-out, background 1s ease-in-out;
-      }
-      input, input:focus, input:hover, input:-webkit-autofill, input:focus-visible {
-        border: 1px solid $accent !important;
-        border-radius: 1em;
-        padding: 0.25em;
-        background: none !important;
-        font-family: $paragraphFamily;
-        outline: none !important;
-        color: $dark;
-        transition: color 1s ease-in-out;
-      }
-    }
-    .signon-container.darkmode {
-      label {
-        background: lighten($dark, 10%);
-      }
-    }
-  }
-  #signon-container.darkmode {
-    h2 {
-      color: $light;
-    }
-    p {
-      color: $light;
-    }
-    label {
-      color: $light;
-    }
-    input {
-      color: $light;
-    }
-  }
-
-  #extra-info-container {
-    display: none;
-  }
+  @import 'account/signon-extra-container';
 }
 
 #signon-content.darkmode {
