--- a/src/main/resources/templates/signon.html
+++ b/src/main/resources/templates/signon.html
@@ -46,29 +46,31 @@
         <h3>Sign In</h3>
     </div>
 
-    <div id="signon-container">
+
+    <form id="signon-container">
         <h2 id="signon-header">Sign Up With Us!</h2>
         <p id="signon-text">Creating an account with us allows you to earn rewards, create meal plans, and streamline future orders!</p>
         <div id="signon-name-container" class="signon-container">
             <label id="signon-name-label" class="label-signon">
                 Name
             </label>
-            <input type="text" id="signon-name-input">
+            <input type="text" id="signon-name-input" autocomplete="username">
         </div>
         <div id="signon-email-container" class="signon-container">
             <label id="signon-email-label" class="label-signon">
                 Email
             </label>
-            <input type="email" id="signon-email-input">
+            <input type="email" id="signon-email-input" autocomplete="email">
         </div>
         <div id="signon-password-container" class="signon-container">
             <label id="signon-password-label" class="label-signon">
                 Password
             </label>
-            <input type="password" id="signon-password-input">
+            <input type="password" id="signon-password-input" autocomplete="new-password">
         </div>
         <button id="signon-button">Sign Up</button>
-    </div>
+    </form>
+
 
     <div id="extra-info-container">
         <!-- Collect info on user: payment info-->
